--- a/news.css
+++ b/news.css
@@ -18,6 +18,7 @@ h2 {
     padding: 15px;
     text-align: center;
     display: inline-block;
+    z-index: 100;
     }
     
     .menu {
@@ -33,7 +34,6 @@ h2 {
         display: none; 
         overflow-y: auto;
         padding-bottom: 20px;
-        z-index: -100;
         text-align: center;
     }
     .menu_button {
@@ -87,7 +87,35 @@ h2 {
             text-align: left;
         }
     }
-    
+/* Стили содержимого новостей  */
+
+
+
+
     main {
         padding-top: 150px;
+        font-size: 40px;
+        color: red;
+        text-align: center;
+        z-index: -200;
+        margin: 10px;
     }
+
+    main .span {
+        font-size:30px;
+        padding: 10px;
+        margin-top: 20px;
+    }
+
+
+.photo {
+    max-width: 600px;
+    border: 2px solid red;
+    border-radius: 20px;
+}
+
+@media (max-width: 600px) {
+    .photo {
+        width: 400px;
+    }
+}
