--- a/menu/menu.css
+++ b/menu/menu.css
@@ -2,18 +2,30 @@ body {
     margin: 0px;
     font-family: sans-serif;
 }
-
 header {
+    color: white;
     background-color: red;
+    height:100px;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    padding: 15px;
     text-align: center;
-    color: white;
-    height: 100px;
-    line-height: 100px;
-    font-size: 30px;
-}
+    display: inline-block;
+    z-index: 300;
+    }
+
+    nav a {
+        border-radius: 5px;
+        color: #ffffff;
+        border:2px solid #ffffff;
+        background-color: #ff0000;
+        text-decoration: none;
+        padding: 5px;
+        margin: 2px;
+    }
+
 
 .window_menu {
     width: 80vh;
@@ -42,4 +54,7 @@ header {
 .window_menu span {
     font-size: 40px;
     margin-top: 10px;
+}
+main {
+    margin-top: 140px;
 }
