--- a/index.css
+++ b/index.css
@@ -6,12 +6,30 @@ body {
 .head {
 text-align: center;
 }
+header {
+    background-color: rgb(255, 0, 0);
+    padding: 10px;
+}
 .name_restaurant {
-    color: red;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 .panel_navigate_restaurant {
     margin: 30px;
+}
+.button_main_navigation {
+    align-items: center;
+    text-align: center;
+    color: white;
+    border: 1px solid white;
+    background-color: rgba(240, 248, 255, 0);
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+    width: 150px;
+    height: 150px;
+    padding: 5px;
+    margin: 10px;
 }
 figure {
     text-align: center;
