--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ h2 {
     padding: 15px;
     text-align: center;
     display: inline-block;
+    z-index: 200;
     }
     
     .menu {
@@ -33,7 +34,7 @@ h2 {
         display: none; 
         overflow-y: auto;
         padding-bottom: 20px;
-        z-index: -100;
+        z-index: 100;
         text-align: center;
     }
     .menu_button {
@@ -91,16 +92,27 @@ h2 {
     main {
         padding-top: 150px;
     }
+    main article {
+        border: 1px solid red;
+        width: 70%;
+        height: 150px;
+        border-radius: 5px;
+        align-items: center;
+    }
+    main article span
+    main article img {
+        height: 100%;
+        width: 220px;
+        border-radius: 5px 0 0 5px;
+    }
     footer {
         background-color: rgb(255, 0, 0);
         text-align: center;
         color: rgb(255, 255, 255);
         padding: 1%;
         bottom: 0px;
-        width: 100%;
-        position: fixed; 
+        width: 100%; 
         bottom: 0;
-        z-index: -200;
      }
      .Telegram_channel {
         text-decoration: none;
