--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ h2 {
         padding: 5px;
         margin: 2px;
     }
-    @media (max-width: 1324px) {
+    @media (max-width: 1340px) {
         nav {
             display: none;
         }
@@ -98,13 +98,41 @@ h2 {
         height: 150px;
         border-radius: 5px;
         align-items: center;
+        margin: 10px;
+        margin: 10px auto;
     }
-    main article span
-    main article img {
-        height: 100%;
+    .image_tovar {
+        height: 150px;
         width: 220px;
         border-radius: 5px 0 0 5px;
+        float: left;
     }
+
+.title_product {
+    padding: 20px;
+    color: red;
+    font-size: 20px;
+    padding-top: 20px;
+    text-align: left;
+}
+#description_button, #order_button {
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid red;
+    color: red;
+    font-size: 15px;
+    margin: 5px;
+}
+@media(max-width:600px) {
+    .image_tovar {
+        border-radius: 5px 5px 0 0;
+    }
+    main article {
+        width: 220px;
+        height: 250px;
+        text-align: center;
+    }
+}
     footer {
         background-color: rgb(255, 0, 0);
         text-align: center;
